--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+
+<head> 
+<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+<h1>Lazy Developer Project Name Generator</h1>
+
 {{ name }}
+
+<button type="button" ><a href="https://shark-app-rp7ck.ondigitalocean.app/">Generate!</a></button>
+
+</body>
+</html>
