--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -2,17 +2,33 @@
 <!DOCTYPE html>
 <html>
 
-<head> 
+<head>
+  
 <link rel="stylesheet" href="{% static 'main.css' %}">
-</head>
+
+  </head>
 
 <body>
 
-<h1>Lazy Developer Project Name Generator</h1>
+  <div class="Title">
+  
+    <h1>Lazy Developer Project Name Generator</h1>
+
+  </div>
+  
+  <section>
+    
+    <div class="Reload">
 
 {{ name }}
+      
+    </div>
 
-<button type="button" ><a href="/">Generate!</a></button>
+<button type="button">
+  <a href="/">Generate!</a>
+    </button>
+    
+    </section>
 
 </body>
 </html>
