--- a/name_project/static/main.css
+++ b/name_project/static/main.css
@@ -1,52 +1,45 @@
-@font-face {
-  font-family: Rubik_Pixels;
-  src: url(/static/fonts/RubikPixels-Regular.ttf);
-}
+/* title area */
 
-@font-face {
-  Font-family: Press_Start;
-  src: url(/static/fonts/PressStart2P-Regular.ttf);
-}
+.header {
 
-@font-face {
-  Font-family: Cantarell_Regular;
-  src: url(/static/fonts/Cantarell-Regular.ttf);
-}
+  padding: 60px;
+  text-align: center;
+  border-bottom: 1px, #0000, solid; 
 
-Body {
-	
-	margin: 30px 30px 30px 30px;
-	background-color: #FDFCFC;
-	
-}
 
-.Title {
+.title {
 	
 h1 {
-	font-family: Press_Start; 
+	font-family: ‘start; 
 	font-size: 40px;
 	color: #ff0061;
 	text-align: center;
 }
+
+}
 	
 }
 
-.Reload {
 
-p {
-	font-family: Cantarell_Regular; 
+
+.reload {
+
+	font-family: ‘reg’; 
 	font-size: 38px;
 	text-align: center;
-}
+
 }
 
 .button { 
-	font-family: Rubik_Pixels;
-	font-size: 36px;
+	
+	h2 {
+font-size: 36px;
+color: #0087;
+} 
+
 	padding: 50px 75px 10px 10px;
 	margin: 10px 10px 10px 10px;
-	background-color:; 
-	color: #0087;
+	background-color: #ffc500; 
 	position: relative; 
 	display: inline;
 	margin: auto; 
