--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -4,10 +4,10 @@
 
 <head>
   
-<link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}"/>
-<link rel="stylesheet" href="{{ url_for('static', filename='pixels.css') }}"/>
-<link rel="stylesheet" href="{{ url_for('static', filename='start.css') }}"/>
-<link rel="stylesheet" href="{{ url_for('static', filename='reg.css') }}"/>
+<link rel="stylesheet" href="{% static 'main.css' %}"/>
+<link rel="stylesheet" href="{% static 'pixels.css' %}"/>
+<link rel="stylesheet" href="{% static 'start.css' %}"/>
+<link rel="stylesheet" href="{% static 'reg.css' %}"/>
 
   </head>
 
