--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -34,7 +34,13 @@
 
       
     </div>
-
+    
+input[type=button] {
+font-family: 'pixels';
+font-size: 36px;
+color: black;
+text-align: center;
+}
 
 <button class="button">
   <a href="/">Generate!</a>
