--- a/name_project/static/main.css
+++ b/name_project/static/main.css
@@ -42,20 +42,22 @@ h1 {
 
 
 .button { 
-	
-
-  display: inline-block;
-  padding: 15px 25px;
-  font-size: 24px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
-  color: black;
-  background-color: #ffd64b;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 6px #ffca18;
+  	display: inline-block;
+  	padding: 15px 25px;
+  	font-size: 24px;
+  	cursor: pointer;
+  	text-align: center;
+  	text-decoration: none;
+  	outline: none;
+  	color: black;
+ 	background-color: #ffd64b;
+	position: relative; 
+	margin: 4px 2px;
+	left: 50%; 
+	right: 50%;
+  	border: none;
+ 	 border-radius: 15px;
+ 	 box-shadow: 0 6px #ffca18;
 }
 
 .button:hover {background-color: #ffdc65}
