--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -8,6 +8,35 @@
 <link rel="stylesheet" href="{% static 'pixels.css' %}"/>
 <link rel="stylesheet" href="{% static 'start.css' %}"/>
 <link rel="stylesheet" href="{% static 'reg.css' %}"/>
+  
+  <style>
+.button { 
+  	display: inline-block;
+  	padding: 15px 25px;
+  	font-size: 24px;
+  	cursor: pointer;
+  	text-align: center;
+  	text-decoration: none;
+  	outline: none;
+  	color: black;
+ 	background-color: #ffd64b;
+	position: relative; 
+	margin: 4px 2px;
+	left: 50%; 
+	right: 50%;
+  	border: none;
+ 	 border-radius: 15px;
+ 	 box-shadow: 0 6px #ffca18;
+}
+
+.button:hover {background-color: #ffdc65}
+
+.button:active {
+  background-color: #ffdc65;
+  box-shadow: 0 5px #ffd033;
+  transform: translateY(4px);
+}
+</style>
 
   </head>
 
