--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -14,9 +14,6 @@
 a 
 {
 font-family: 'pixels';
-font-size: 36px;
-color: black;
-text-align: center;
 }
 
 a:link, a:visited 
@@ -34,9 +31,8 @@ a:link, a:visited
 	margin: 4px 2px;
 	left: 50%; 
 	right: 50%;
-  	border: none;
- 	 border-radius: 15px;
- 	 box-shadow: 0 6px #ffca18;
+ 	border-radius: 15px;
+ 	box-shadow: 0 6px #ffca18;
 }
 
 a:hover 
@@ -79,7 +75,7 @@ a:active
       
     </div>
 	  
-<a href="/">Generate!</a>
+<a href="/">generate!</a>
     
     </section>
 
