--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -10,14 +10,15 @@
 <link rel="stylesheet" href="{% static 'reg.css' %}"/>
   
 <style>
-
+	
 a 
 {
-font-family: 'pixels';
+font-family:'pixels';
 }
 
 a:link, a:visited 
 {
+	font-family:'pixels';
   display: inline-block;
   	padding: 15px 25px;
   	font-size: 24px;
@@ -57,7 +58,7 @@ a:active
 
   <div class="Title">
   
-    <h1>Lazy Developer Project Name Generator</h1>
+<h1 style="color:#e30056;font-family:'start';">Lazy Developer Project Name Generator</h1>
 
   </div>
     
