--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -58,7 +58,7 @@ a:active
 
   <div class="Title">
   
-<h1 style="color:#e30056;font-family:'start';">Lazy Developer Project Name Generator</h1>
+<h1 style="font-family: 'start'; color: #e30056;">Lazy Developer Project Name Generator</h1>
 
   </div>
     
