Update index.html (#29)
Co-authored-by: Matt Goldman <matt@carsandbids.com>

--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -10,7 +10,15 @@
 <link rel="stylesheet" href="{% static 'reg.css' %}"/>
   
 <style>
-	
+
+h1 
+{
+	font-family: ‘start’;
+	color:#e30056;
+	font-size: 40px;
+	text-align: center;
+}
+
 a 
 {
 font-family:'pixels';
@@ -19,7 +27,7 @@ font-family:'pixels';
 a:link, a:visited 
 {
 	font-family:'pixels';
-  display: inline-block;
+  	display: inline-block;
   	padding: 15px 25px;
   	font-size: 24px;
   	cursor: pointer;
@@ -58,7 +66,8 @@ a:active
 
   <div class="Title">
   
-<h1 style="font-family: 'start'; color: #e30056;">Lazy Developer Project Name Generator</h1>
+<h1>Lazy Developer Project Name Generator</h1>
+
 
   </div>
     
