--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -15,8 +15,17 @@ h1
 {
 	font-family: ‘start’;
 	color:#e30056;
-	font-size: 40px;
+	font-size: 36px;
 	text-align: center;
+}
+
+body 
+{
+	font-family: ‘reg’;
+font-size: 100px;
+	position: relative;
+	left: 50%;
+	right: 50%;
 }
 
 a 
@@ -26,13 +35,11 @@ font-family:'pixels';
 
 a:link, a:visited 
 {
-	font-family:'pixels';
   	display: inline-block;
   	padding: 15px 25px;
   	font-size: 24px;
   	cursor: pointer;
   	text-align: center;
-  	text-decoration: none;
   	outline: none;
   	color: black;
  	background-color: #ffd64b;
@@ -46,7 +53,7 @@ a:link, a:visited
 
 a:hover 
 {
-  background-color: #ffdc65
+  background-color: #ffdc65;
 }
 
 a:active 
@@ -68,7 +75,6 @@ a:active
   
 <h1>Lazy Developer Project Name Generator</h1>
 
-
   </div>
     
   </div>
@@ -79,10 +85,8 @@ a:active
 
 {{ name }}
 
-  
  <br>
 
-      
     </div>
 	  
 <a href="/">generate!</a>
