--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -22,15 +22,14 @@ h1
 body 
 {
 	font-family: ‘reg’;
-font-size: 100px;
-	position: relative;
-	left: 50%;
-	right: 50%;
+	font-size: 84px;
+	text-align: center;
+	overflow: hidden;
 }
 
 a 
 {
-font-family:'pixels';
+	font-family:'pixels';
 }
 
 a:link, a:visited 
