--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -44,8 +44,7 @@ a:link, a:visited
  	background-color: #ffd64b;
 	position: relative; 
 	margin: 4px 2px;
-	left: 50%; 
-	right: 50%;
+	overflow: hidden;
  	border-radius: 15px;
  	box-shadow: 0 6px #ffca18;
 }
