--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -88,7 +88,7 @@ a:active
 
     </div>
 	  
-<a href="/">generate!</a>
+<a href="/" style=”font-family: ‘pixels’;”>generate!</a>
     
     </section>
 
