--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -13,7 +13,7 @@
 
 h1 
 {
-	font-family: ‘start’;
+	font-family: start;
 	color:#e30056;
 	font-size: 36px;
 	text-align: center;
@@ -21,21 +21,17 @@ h1
 
 body 
 {
-	font-family: ‘reg’;
-	font-size: 84px;
+	font-family: reg;
+font-size: 84px;
 	text-align: center;
 	overflow: hidden;
 }
 
-a 
-{
-	font-family:'pixels';
-}
-
 a:link, a:visited 
 {
+	font-family: pixels;
   	display: inline-block;
-  	padding: 15px 25px;
+  	padding: 30px 25px;
   	font-size: 24px;
   	cursor: pointer;
   	text-align: center;
@@ -87,9 +83,10 @@ a:active
 
     </div>
 	  
-<a href="/" style=”font-family: ‘pixels’;”>generate!</a>
+<a href="/">generate!</a>
     
     </section>
 
 </body>
 </html>
+
