--- a/name_project/static/pixels.css
+++ b/name_project/static/pixels.css
@@ -1,6 +1,6 @@
 /* button font file */
 
 @font-face {
-  font-family: ‘pixels’;
+  font-family: pixels;
   src: url(/static/fonts/RubikPixels-Regular.ttf);
 }
