--- a/name_project/static/reg.css
+++ b/name_project/static/reg.css
@@ -1,5 +1,5 @@
 /* body font file */
 @font-face {
- 	font-family: ‘reg’;
-  src: url(/static/fonts/Cantarell-Regular.ttf);
+ 	font-family: reg;
+  src: url(/static/fonts/cantarell-regular.ttf);
 }
