--- a/name_project/static/start.css
+++ b/name_project/static/start.css
@@ -1,6 +1,6 @@
 /* header font file */
 
 @font-face {
-  font-family: ‘start’;
+  font-family: start;
   src: url(/static/fonts/PressStart2P-Regular.ttf);
 }
