--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -13,7 +13,7 @@
 
 h1 
 {
-	font-family: start;
+	font-family: pstart;
 	color:#e30056;
 	font-size: 36px;
 	text-align: center;
@@ -22,7 +22,7 @@ h1
 body 
 {
 	font-family: reg;
-font-size: 76px;
+    font-size: 72px;
 	text-align: center;
 	overflow: hidden;
 }
@@ -30,6 +30,7 @@ font-size: 76px;
 a:link, a:visited 
 {
 	font-family: pixels;
+    text-decoration: none;
   	display: inline-block;
   	padding: 30px 25px;
   	font-size: 24px;
