--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -5,7 +5,7 @@
 <head>
   
 <link rel="stylesheet" href="{% static 'main.css' %}"/>
-<link rel="stylesheet" href="{% static 'pixels.css' %}"/>
+<link rel="stylesheet" href="{% static 'blox.css' %}"/>
 <link rel="stylesheet" href="{% static 'start.css' %}"/>
 <link rel="stylesheet" href="{% static 'reg.css' %}"/>
   
@@ -29,7 +29,7 @@ body
 
 a:link, a:visited 
 {
-	font-family: pixels;
+	font-family: blox;
     	text-decoration: none;
   	display: inline-block;
   	padding: 15px 25px;
