--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -22,7 +22,7 @@ h1
 body 
 {
 	font-family: reg;
-    	font-size: 48px;
+    	font-size: 54px;
 	text-align: center;
 	overflow: hidden;
 }
@@ -33,14 +33,14 @@ a:link, a:visited
     	text-decoration: none;
   	display: inline-block;
   	padding: 15px 25px;
-  	font-size: 28px;
+  	font-size: 24px;
   	cursor: pointer;
   	text-align: center;
   	outline: none;
   	color: black;
  	background-color: #ffd64b;
 	position: relative; 
-	margin: 4px 2px;
+	margin: 30px;
 	overflow: hidden;
  	border-radius: 15px;
  	box-shadow: 0 6px #ffca18;
@@ -96,7 +96,7 @@ a:active
   
   <section>
     
-    <div class="line-1 animation">
+    <div class="line-1 animate">
 
 {{ name }}
 
