--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -14,7 +14,7 @@
 h1 
 {
 	font-family: pstart;
-	color:#e30056;
+	color: #e30056;
 	font-size: 36px;
 	text-align: center;
 }
@@ -22,7 +22,7 @@ h1
 body 
 {
 	font-family: reg;
-    	font-size: 54px;
+    	font-size: 64px;
 	text-align: center;
 	overflow: hidden;
 }
@@ -30,10 +30,11 @@ body
 a:link, a:visited 
 {
 	font-family: blox;
+	color: #4770FD;
     	text-decoration: none;
   	display: inline-block;
   	padding: 15px 25px;
-  	font-size: 24px;
+  	font-size: 20px;
   	cursor: pointer;
   	text-align: center;
   	outline: none;
