--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -117,5 +117,13 @@ body
     </section>
 
 </body>
+	<footer>
+		<p>
+			Built by <a href="https://tacobelllabs.net/@robotmlg">Matt</a> and Rachel Goldman
+		</p>
+		<p>
+			<a href="https://github.com/robotmlg/help-me-name-my-project">Contribute on GitHub</a>
+		</p>
+	</footer>
 </html>
 
