--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -60,7 +60,7 @@ body
 {
     position: relative;
     top: 50%;  
-    width: 24em;
+    width: 100vw;
     margin: 0 auto;
     border-right: 2px solid rgba(255,255,255,.75);
     font-size: 180%;
@@ -78,7 +78,7 @@ body
 	
 @keyframes typewriter{
   from{width: 0;}
-  to{width: 24em;}
+  to{width: 97vw;}
 }
 	
 @keyframes blinkTextCursor{
