--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -55,7 +55,8 @@ body
 {
 	height: calc(100vh - 8em);
 	font-family: reg;
-	font-size: 64px;
+	font-size: 56px;
+	text-align: center;
 }
 .line-1
 {
@@ -135,17 +136,17 @@ a.foot:hover, a.foot:active
 
     </div>
 	  
-<a href="/">generate</a>
+	<a href="/">generate</a>
     
     </section>
 
 </body>
 	<footer>
 		<p>
-			Built by <a.foot href="https://tacobelllabs.net/@robotmlg">Matt</a> and Rae Goldman
+			Built by <a.foot href="https://tacobelllabs.net/@robotmlg">Matt</a.foot> &amp; Rae Goldman
 		</p>
 		<p>
-			<a.foot href="https://github.com/robotmlg/help-me-name-my-project">Contribute on GitHub</a>
+			<a.foot href="https://github.com/robotmlg/help-me-name-my-project">Contribute on GitHub</a.foot>
 		</p>
 	</footer>
 </html>
