--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -22,7 +22,7 @@ h1
 a:link, a:visited 
 {
 	font-family: blox;
-	color: #4770fd;
+	color: #127EF7;
     	text-decoration: none;
   	display: inline-block;
   	padding: 15px 25px;
@@ -98,7 +98,7 @@ footer
 a.foot:link, a.foot:visited 
 {
 	font-family: pstart;
-	color: black;
+	color: #127EF7;
     	text-decoration: none;
   	font-size: 12px;
   	cursor: pointer;
@@ -107,7 +107,22 @@ a.foot:link, a.foot:visited
 
 a.foot:hover, a.foot:active
 {
-  color: #4770fd;
+  color: #1245F7;
+}
+	
+a.git:link, a.foot:visited 
+{
+	font-family: reg;
+	color: black;
+    	text-decoration: none;
+  	font-size: 10px;
+  	cursor: pointer;
+	overflow: hidden;
+}
+
+a.git:hover, a.foot:active
+{
+  color: #00E38D;
 }
 
 </style>
@@ -143,10 +158,10 @@ a.foot:hover, a.foot:active
 </body>
 	<footer>
 		<p>
-			Built by <a.foot href="https://tacobelllabs.net/@robotmlg">Matt</a.foot> &amp; Rae Goldman
+			Built by <a class="foot" href="https://tacobelllabs.net/@robotmlg">Matt</a> &amp; Rae Goldman
 		</p>
 		<p>
-			<a.foot href="https://github.com/robotmlg/help-me-name-my-project">Contribute on GitHub</a.foot>
+			<a class="git" href="https://github.com/robotmlg/help-me-name-my-project">Contribute on GitHub</a>
 		</p>
 	</footer>
 </html>
