--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -30,7 +30,6 @@ a:link, a:visited
   	cursor: pointer;
   	text-align: center;
   	outline: none;
-  	color: black;
  	background-color: #ffd64b;
 	position: relative; 
 	margin: 30px;
@@ -98,7 +97,7 @@ footer
 a.foot:link, a.foot:visited 
 {
 	font-family: pstart;
-	color: #127EF7;
+	color: black;
     	text-decoration: none;
   	font-size: 12px;
   	cursor: pointer;
@@ -107,10 +106,10 @@ a.foot:link, a.foot:visited
 
 a.foot:hover, a.foot:active
 {
-  color: #1245F7;
+  color: #ffd64b;
 }
 	
-a.git:link, a.foot:visited 
+a.git:link, a.git:visited 
 {
 	font-family: reg;
 	color: black;
@@ -120,7 +119,7 @@ a.git:link, a.foot:visited
 	overflow: hidden;
 }
 
-a.git:hover, a.foot:active
+a.git:hover, a.git:active
 {
   color: #00E38D;
 }
