--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -17,12 +17,13 @@ h1
 	color: #e30056;
 	font-size: 36px;
 	text-align: center;
+	margin-bottom: 60px;
 }
 
 a:link, a:visited 
 {
 	font-family: blox;
-	color: #4770fd;
+	color: #127EF7;
     	text-decoration: none;
   	display: inline-block;
   	padding: 15px 25px;
@@ -30,7 +31,6 @@ a:link, a:visited
   	cursor: pointer;
   	text-align: center;
   	outline: none;
-  	color: black;
  	background-color: #ffd64b;
 	position: relative; 
 	margin: 30px;
@@ -107,7 +107,22 @@ a.foot:link, a.foot:visited
 
 a.foot:hover, a.foot:active
 {
-  color: #4770fd;
+  color: #ffd64b;
+}
+	
+a.git:link, a.git:visited 
+{
+	font-family: reg;
+	color: black;
+    	text-decoration: none;
+  	font-size: 10px;
+  	cursor: pointer;
+	overflow: hidden;
+}
+
+a.git:hover, a.git:active
+{
+  color: #00E38D;
 }
 
 </style>
@@ -143,10 +158,10 @@ a.foot:hover, a.foot:active
 </body>
 	<footer>
 		<p>
-			Built by <a.foot href="https://tacobelllabs.net/@robotmlg">Matt</a.foot> &amp; Rae Goldman
+			Built by <a class="foot" href="https://tacobelllabs.net/@robotmlg">Matt</a> &amp; Rae Goldman
 		</p>
 		<p>
-			<a.foot href="https://github.com/robotmlg/help-me-name-my-project">Contribute on GitHub</a.foot>
+			<a class="git" href="https://github.com/robotmlg/help-me-name-my-project">Contribute on GitHub</a>
 		</p>
 	</footer>
 </html>
