--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -20,7 +20,7 @@ h1
 	margin-bottom: 60px;
 }
 
-a:link, a:visited 
+a.gen:link, a.gen:visited 
 {
 	font-family: blox;
 	color: #127EF7;
@@ -39,12 +39,12 @@ a:link, a:visited
  	box-shadow: 0 6px #ffca18;
 }
 
-a:hover 
+a.gen:hover 
 {
   background-color: #ffdc65;
 }
 
-a:active 
+a.gen:active
 {
   background-color: #ffdc65;
   box-shadow: 0 5px #ffd033;
@@ -151,7 +151,7 @@ a.git:hover, a.git:active
 
     </div>
 	  
-	<a href="/">generate</a>
+	<a class="gen" href="/">generate</a>
     
     </section>
 
