--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -54,8 +54,9 @@ a.gen:active
 body
 {
 	height: calc(100vh - 8em);
+	width: fit-content;
 	font-family: reg;
-	font-size: 50px;
+	font-size: 52px;
 	text-align: center;
 }
 .line-1
@@ -90,7 +91,7 @@ body
 
 footer
 {
-	font-size: 18px;
+	font-size: 16px;
 	font-family: pstart;
 	text-align: center;
 }
@@ -100,14 +101,14 @@ a.foot:link, a.foot:visited
 	font-family: pstart;
 	color: black;
     	text-decoration: none;
-  	font-size: 18px;
+  	font-size: 16px;
   	cursor: pointer;
 	overflow: hidden;
 }
 
 a.foot:hover, a.foot:active
 {
-  color: #ffd64b;
+  color: #127EF7;
 }
 	
 a.git:link, a.git:visited 
@@ -115,7 +116,7 @@ a.git:link, a.git:visited
 	font-family: reg;
 	color: black;
     	text-decoration: none;
-  	font-size: 18px;
+  	font-size: 20px;
   	cursor: pointer;
 	overflow: hidden;
 }
