--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -1,9 +1,9 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
-  
+
 <link rel="stylesheet" href="{% static 'main.css' %}"/>
 <link rel="stylesheet" href="{% static 'blox.css' %}"/>
 <link rel="stylesheet" href="{% static 'start.css' %}"/>
