--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -54,40 +54,11 @@ a.gen:active
 body
 {
 	height: calc(100vh - 8em);
-	width: fit-content;
 	font-family: reg;
 	font-size: 52px;
-	text-align: center;
+	justify-content: center;
 }
-.line-1
-{
-    position: relative;
-    top: 50%;  
-    width: 100vw;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    font-size: 180%;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    transform: translateY(-50%);    
-}
-
-.animate
-{
-  animation: typewriter 4s steps(44) 1s 1 normal both,
-             blinkTextCursor 500ms steps(44) normal;
-}
-	
-@keyframes typewriter{
-  from{width: 0;}
-  to{width: 97vw;}
-}
-	
-@keyframes blinkTextCursor{
-  from{border-right-color: rgba(255,255,255,.75);}
-  to{border-right-color: transparent;}
-}
+* {color:black; text-decoration: none;}
 
 footer
 {
@@ -143,12 +114,68 @@ a.git:hover, a.git:active
   </div>
   
   <section>
-    
-    <div class="line-1 animate">
+    <a href="" class="typewrite" data-period="2000" data-type='[“{{ name }}”]'>
+    <span class="wrap"></span>
+  </a>
+  
+<script>
+var TxtType = function(el, toRotate, period) {
+        this.toRotate = toRotate;
+        this.el = el;
+        this.loopNum = 0;
+        this.period = parseInt(period, 10) || 2000;
+        this.txt = '';
+        this.tick();
+        this.isDeleting = false;
+    };
 
-{{ name }}
+    TxtType.prototype.tick = function() {
+        var i = this.loopNum % this.toRotate.length;
+        var fullTxt = this.toRotate[i];
 
- <br>
+        if (this.isDeleting) {
+        this.txt = fullTxt.substring(0, this.txt.length - 1);
+        } else {
+        this.txt = fullTxt.substring(0, this.txt.length + 1);
+        }
+
+        this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+        var that = this;
+        var delta = 200 - Math.random() * 100;
+
+        if (this.isDeleting) { delta /= 2; }
+
+        if (!this.isDeleting && this.txt === fullTxt) {
+        delta = this.period;
+        this.isDeleting = true;
+        } else if (this.isDeleting && this.txt === '') {
+        this.isDeleting = false;
+        this.loopNum++;
+        delta = 500;
+        }
+
+        setTimeout(function() {
+        that.tick();
+        }, delta);
+    };
+
+    window.onload = function() {
+        var elements = document.getElementsByClassName('typewrite');
+        for (var i=0; i<elements.length; i++) {
+            var toRotate = elements[i].getAttribute('data-type');
+            var period = elements[i].getAttribute('data-period');
+            if (toRotate) {
+              new TxtType(elements[i], JSON.parse(toRotate), period);
+            }
+        }
+        // INJECT CSS
+        var css = document.createElement("style");
+        css.type = "text/css";
+        css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+        document.body.appendChild(css);
+    };
+</script>
 
     </div>
 	  
@@ -166,4 +193,3 @@ a.git:hover, a.git:active
 		</p>
 	</footer>
 </html>
-
