--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -114,7 +114,7 @@ a.git:hover, a.git:active
   </div>
   
   <section>
-    <a href="" class="typewrite" data-period="2000" data-type='[“{{ name }}”]'>
+    <a href="" class="typewrite" data-period="2000" data-type='["{{ name }}"]'>
     <span class="wrap"></span>
   </a>
   
