--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -57,6 +57,7 @@ body
 	font-family: reg;
 	font-size: 52px;
 	justify-content: center;
+	text-align: center;
 }
 * {color:black; text-decoration: none;}
 
@@ -117,6 +118,7 @@ a.git:hover, a.git:active
     <a href="" class="typewrite" data-period="2000" data-type='["{{ name }}"]'>
     <span class="wrap"></span>
   </a>
+	 <br>
   
 <script>
 var TxtType = function(el, toRotate, period) {
@@ -148,7 +150,7 @@ var TxtType = function(el, toRotate, period) {
 
         if (!this.isDeleting && this.txt === fullTxt) {
         delta = this.period;
-        this.isDeleting = true;
+        this.isDeleting = false;
         } else if (this.isDeleting && this.txt === '') {
         this.isDeleting = false;
         this.loopNum++;
