--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -126,17 +126,15 @@ var TxtType = function(el, toRotate, period) {
         this.period = parseInt(period, 10) || 2000;
         this.txt = '';
         this.tick();
-        this.isDeleting = false;
+        this.stop = false;
     };
 
     TxtType.prototype.tick = function() {
         var i = this.loopNum % this.toRotate.length;
         var fullTxt = this.toRotate[i];
 
-        if (this.isDeleting) {
-        this.txt = fullTxt.substring(0, this.txt.length - 1);
-        } else {
-        this.txt = fullTxt.substring(0, this.txt.length + 1);
+        if (!this.stop) {
+        	this.txt = fullTxt.substring(0, this.txt.length + 1);
         }
 
         this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
@@ -144,15 +142,9 @@ var TxtType = function(el, toRotate, period) {
         var that = this;
         var delta = 200 - Math.random() * 100;
 
-        if (this.isDeleting) { delta /= 2; }
-
-        if (!this.isDeleting && this.txt === fullTxt) {
-        delta = this.period;
-        this.isDeleting = true;
-        } else if (this.isDeleting && this.txt === '') {
-        this.isDeleting = false;
-        this.loopNum++;
-        delta = 500;
+        if (!this.stop && this.txt === fullTxt) {
+        	delta = this.period;
+        	this.stop = true;
         }
 
         setTimeout(function() {
