--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -17,7 +17,7 @@ h1
 	color: #e30056;
 	font-size: 36px;
 	text-align: center;
-	margin-bottom: 70px;
+	margin-bottom: 10px;
 }
 
 a.gen:link, a.gen:visited 
@@ -33,7 +33,7 @@ a.gen:link, a.gen:visited
   	outline: none;
  	background-color: #ffd64b;
 	position: relative; 
-	margin: 1px;
+	margin-top: 30px;
 	overflow: hidden;
  	border-radius: 15px;
  	box-shadow: 0 6px #ffca18;
