--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -11,6 +11,28 @@
   
 <style>
 
+@media only screen and (max-width:99vw) 
+{
+	.html-block 
+	{
+		h1 
+		{
+			margin-left: 5vw;
+			margin-right: 5vw;
+ 		}
+		body
+		{
+			margin-left: 5vw;
+			margin-right: 5vw;
+		}
+		footer
+		{
+			margin-left: 5vw;
+			margin-right: 5vw;
+		}
+	}
+}
+	
 h1 
 {
 	font-family: pstart;
