--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -119,7 +119,68 @@ a.git:hover, a.git:active
 {
   color: #00E38D;
 }
+	
+a.faq:link, a.faq:visited 
+{
+	font-family: blox;
+	color: #ffd64b;
+    	text-decoration: none;
+  	display: inline-block;
+  	padding: 10px 20px;
+  	font-size: 16px;
+  	cursor: pointer;
+  	text-align: center;
+  	outline: none;
+ 	background-color: #127EF7;
+	position: relative; 
+	margin-top: 30px;
+	overflow: hidden;
+ 	border-radius: 15px;
+ 	box-shadow: 0 6px #106ED8;
+}
 
+a.faq:hover 
+{
+  background-color: #4D9EF9;
+}
+
+a.faq:active
+{
+  background-color: #4D9EF9;
+  box-shadow: 0 5px #0E5FB9;
+  transform: translateY(4px);
+}
+	
+a.info:link, a.info:visited 
+{
+	font-family: blox;
+	color: white;
+    	text-decoration: none;
+  	display: inline-block;
+  	padding: 10px 20px;
+  	font-size: 16px;
+  	cursor: pointer;
+  	text-align: center;
+  	outline: none;
+ 	background-color: #e30056;
+	position: relative; 
+	margin-top: 30px;
+	overflow: hidden;
+ 	border-radius: 15px;
+ 	box-shadow: 0 6px #C7004B;
+}
+
+a.info:hover 
+{
+  background-color: #EA4080;
+}
+
+a.info:active
+{
+  background-color: #EA4080;
+  box-shadow: 0 5px #E6206B;
+  transform: translateY(4px);
+}
 </style>
 
   </head>
@@ -202,6 +263,10 @@ var TxtType = function(el, toRotate, period) {
 
 </body>
 	<footer>
+		<p>
+			<a class="faq" href="https://helpmenamemyproject.com/faq">FAQ</a> 
+			<a class="info" href="https://helpmenamemyproject.com/info">info</a>
+		</p>
 		<p>
 			Built by <a class="foot" href="https://tacobelllabs.net/@robotmlg">Matt</a> &amp; Rae Goldman
 		</p>
