--- a/name_project/templates/faq.html
+++ b/name_project/templates/faq.html
@@ -220,7 +220,7 @@ a.mail:hover, a.mail:active
   <p>We dare you to.</p>
   <h2>Are you a project developer?</h2>
   <p>Nope!</p>
-  <h2>Is this site affiliated with any business, developer, brand, consultant, engineering firm, car enthusiast auction site, supermarket chain, 7 time grammy winning musician, NHL team, etc.?</h2>
+  <h2>Is this site affiliated with any business, developer, brand, consultant, engineering firm, car enthusiast auction site, supermarket chain, 7 time grammy award winning musician, NHL team, etc.?</h2>
   <p>No - views expressed within this page are independent of any external entity. </p>
    </div>
 
