--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -85,6 +85,7 @@ body
 
 footer
 {
+	margin-top=-16px;
 	font-size: 16px;
 	font-family: pstart;
 	text-align: center;
@@ -267,6 +268,7 @@ var TxtType = function(el, toRotate, period) {
 			<a class="faq" href="https://helpmenamemyproject.com/faq">FAQ</a> 
 			<a class="info" href="https://helpmenamemyproject.com/info">info</a>
 		</p>
+		<br>
 		<p>
 			Built by <a class="foot" href="https://tacobelllabs.net/@robotmlg">Matt</a> &amp; Rae Goldman
 		</p>
