--- a/name_project/templates/faq.html
+++ b/name_project/templates/faq.html
@@ -65,13 +65,17 @@ body
 	font-size: 24px;
 	justify-content: center;
 	text-align: center;
+	margin-right: 10vw;
+	margin-left: 10vw;
 }
 
 footer
 {
+	margin-top:-16px;
 	font-size: 16px;
 	font-family: pstart;
 	text-align: center;
+	margin-bottom:20px;
 }
 
 a.foot:link, a.foot:visited 
