--- a/name_project/templates/faq.html
+++ b/name_project/templates/faq.html
@@ -231,7 +231,7 @@ a.mail:hover, a.mail:active
 </body>
 	<footer>
 		<p>
-			<a class="info" href="https://helpmenamemyproject.com/faq">info</a> 
+			<a class="info" href="https://helpmenamemyproject.com/info">info</a> 
 			<a class="home" href="https://helpmenamemyproject.com">back to the generator</a>
 		</p>
 					</footer>
