--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -18,7 +18,7 @@
 		h1 
 		{
 			margin-left: 5vw;
-			margin-right: 5vw;
+			margin-right: 10vw;
  		}
 		body
 		{
@@ -40,6 +40,7 @@ h1
 	font-size: 36px;
 	text-align: center;
 	margin-bottom: 10px;
+	justify-content: center;
 }
 
 a.gen:link, a.gen:visited 
