--- a/name_project/templates/faq.html
+++ b/name_project/templates/faq.html
@@ -40,6 +40,8 @@ h1
 	font-size: 36px;
 	text-align: center;
 	margin-bottom: 10px;
+	margin-right: 3vw;
+	margin-left: 3vw;
 }
 
 h2 
@@ -57,6 +59,8 @@ body
 	font-size: 32px;
 	justify-content: center;
 	text-align: center;
+	margin-right: 3vw;
+	margin-left: 3vw;
 }
 
 .div-2
@@ -76,6 +80,8 @@ footer
 	font-family: pstart;
 	text-align: center;
 	margin-bottom:20px;
+	margin-right: 3vw;
+	margin-left: 3vw;
 }
 
 a.foot:link, a.foot:visited 
