--- a/name_project/templates/info.html
+++ b/name_project/templates/info.html
@@ -39,7 +39,10 @@ h1
 	color: #e30056;
 	font-size: 36px;
 	text-align: center;
+	justify-content: center;
 	margin-bottom: 10px;
+	margin-right: 3vw;
+	margin-left: 3vw;
 }
 
 h2 
@@ -48,7 +51,10 @@ h2
 	color: #127EF7;
 	font-size: 18px;
 	text-align: center;
-    margin-bottom:-25px;
+    	margin-bottom:-25px;
+	justify-content: center;
+	margin-right: 3vw;
+	margin-left: 3vw;
 }
 
 body
@@ -57,6 +63,8 @@ body
 	font-size: 32px;
 	justify-content: center;
 	text-align: center;
+	margin-right: 3vw;
+	margin-left: 3vw;
 }
 
 .div-2
@@ -65,13 +73,19 @@ body
 	font-size: 24px;
 	justify-content: center;
 	text-align: center;
+	margin-right: 10vw;
+	margin-left: 10vw;
 }
 
 footer
 {
+	margin-top:-16px;
 	font-size: 16px;
 	font-family: pstart;
 	text-align: center;
+	margin-bottom:20px;
+	margin-right: 3vw;
+	margin-left: 3vw;
 }
 
 a.foot:link, a.foot:visited 
