--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -18,7 +18,7 @@
 		h1 
 		{
 			margin-left: 5vw;
-			margin-right: 10vw;
+			margin-right: 5vw;
  		}
 		body
 		{
@@ -41,6 +41,8 @@ h1
 	text-align: center;
 	margin-bottom: 10px;
 	justify-content: center;
+	margin-left:3vw;
+	margin-right:3vw;
 }
 
 a.gen:link, a.gen:visited 
@@ -81,15 +83,19 @@ body
 	font-size: 64px;
 	justify-content: center;
 	text-align: center;
+	margin-left:3vw;
+	margin-right:3vw;
 }
 * {color:black; text-decoration: none;}
 
 footer
 {
-	margin-top:-10px;
+	margin-top:-16px;
 	font-size: 16px;
 	font-family: pstart;
 	text-align: center;
+	margin-left:3vw;
+	margin-right:3vw;
 }
 
 a.foot:link, a.foot:visited 
