Update faq.html (#96)

--- a/name_project/templates/faq.html
+++ b/name_project/templates/faq.html
@@ -39,6 +39,7 @@ h1
 	color: #e30056;
 	font-size: 36px;
 	text-align: center;
+	justify-content: center;
 	margin-bottom: 10px;
 	margin-right: 3vw;
 	margin-left: 3vw;
@@ -50,7 +51,10 @@ h2
 	color: #127EF7;
 	font-size: 18px;
 	text-align: center;
-    margin-bottom:-25px;
+    	margin-bottom:-25px;
+	justify-content: center;
+	margin-right: 3vw;
+	margin-left: 3vw;
 }
 
 body
