clean up CSS a wee bit

--- a/name_project/templates/info.html
+++ b/name_project/templates/info.html
@@ -4,212 +4,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
 
-<link rel="stylesheet" href="{% static 'main.css' %}"/>
 <link rel="stylesheet" href="{% static 'blox.css' %}"/>
 <link rel="stylesheet" href="{% static 'start.css' %}"/>
 <link rel="stylesheet" href="{% static 'reg.css' %}"/>
+<link rel="stylesheet" href="{% static 'main.css' %}"/>
 
-<style>
 
-@media only screen and (max-width:99vw) 
-{
-	.html-block 
-	{
-		h1 
-		{
-			margin-left: 5vw;
-			margin-right: 5vw;
- 		}
-		body
-		{
-			margin-left: 5vw;
-			margin-right: 5vw;
-		}
-		footer
-		{
-			margin-left: 5vw;
-			margin-right: 5vw;
-		}
-	}
-}
-
-h1 
-{
-	font-family: pstart;
-	color: #e30056;
-	font-size: 36px;
-	text-align: center;
-	justify-content: center;
-	margin-bottom: 10px;
-	margin-right: 3vw;
-	margin-left: 3vw;
-}
-
-h2 
-{
-	font-family: pstart;
-	color: #127EF7;
-	font-size: 18px;
-	text-align: center;
-    	margin-bottom:-25px;
-	justify-content: center;
-	margin-right: 3vw;
-	margin-left: 3vw;
-}
-
-body
-{
-	font-family: reg;
-	font-size: 32px;
-	justify-content: center;
-	text-align: center;
-	margin-right: 3vw;
-	margin-left: 3vw;
-}
-
-.div-2
-{
-	font-family: reg;
-	font-size: 24px;
-	justify-content: center;
-	text-align: center;
-	margin-right: 10vw;
-	margin-left: 10vw;
-}
-
-footer
-{
-	margin-top:-16px;
-	font-size: 16px;
-	font-family: pstart;
-	text-align: center;
-	margin-bottom:20px;
-	margin-right: 3vw;
-	margin-left: 3vw;
-}
-
-a.foot:link, a.foot:visited 
-{
-	font-family: pstart;
-	color: black;
-    	text-decoration: none;
-  	font-size: 16px;
-  	cursor: pointer;
-	overflow: hidden;
-}
-
-a.foot:hover, a.foot:active
-{
-  color: #127EF7;
-}
-
-a.faq:link, a.faq:visited 
-{
-	font-family: blox;
-	color: #ffd64b;
-    text-decoration: none;
-  	display: inline-block;
-  	padding: 10px 20px;
-  	font-size: 16px;
-  	cursor: pointer;
-  	text-align: center;
-  	outline: none;
- 	background-color: #127EF7;
-	position: relative; 
-	margin-top: 30px;
-	overflow: hidden;
- 	border-radius: 15px;
- 	box-shadow: 0 6px #106ED8;
-}
-
-a.faq:hover 
-{
-  background-color: #4D9EF9;
-}
-
-a.faq:active
-{
-  background-color: #4D9EF9;
-  box-shadow: 0 5px #0E5FB9;
-  transform: translateY(4px);
-}
-
-a.info:link, a.info:visited 
-{
-	font-family: blox;
-	color: white;
-    	text-decoration: none;
-  	display: inline-block;
-  	padding: 10px 20px;
-  	font-size: 16px;
-  	cursor: pointer;
-  	text-align: center;
-  	outline: none;
- 	background-color: #e30056;
-	position: relative; 
-	margin-top: 30px;
-	overflow: hidden;
- 	border-radius: 15px;
- 	box-shadow: 0 6px #C7004B;
-}
-
-a.info:hover 
-{
-  background-color: #EA4080;
-}
-
-a.info:active
-{
-  background-color: #EA4080;
-  box-shadow: 0 5px #E6206B;
-  transform: translateY(4px);
-}
-
-a.home:link, a.home:visited 
-{
-	font-family: blox;
-	color: #127EF7;
-    	text-decoration: none;
-  	display: inline-block;
-  	padding: 10px 20px;
-  	font-size: 16px;
-  	cursor: pointer;
-  	text-align: center;
-  	outline: none;
- 	background-color: #ffd64b;
-	position: relative; 
-	margin-top: 30px;
-	overflow: hidden;
- 	border-radius: 15px;
- 	box-shadow: 0 6px #ffca18;
-}
-a.home:hover 
-{
-  background-color: #ffdc65;
-}
-a.home:active
-{
-  background-color: #ffdc65;
-  box-shadow: 0 5px #ffd033;
-  transform: translateY(4px);
-}
-
-a.mail:link, a.mail:visited 
-{
-	font-family: reg;
-	color: #00E38D;
-    text-decoration: none;
-  	font-size: 24px;
-  	cursor: pointer;
-	overflow: hidden;
-}
-
-a.mail:hover, a.mail:active
-{
-  color: #E30056;
-}
-
-</style>
 
   </head>
 
@@ -232,8 +32,8 @@ a.mail:hover, a.mail:active
 </body>
 	<footer>
 		<p>
-			<a class="faq" href="https://helpmenamemyproject.com/faq">FAQ</a> 
-			<a class="home" href="https://helpmenamemyproject.com">back to the generator</a>
+			<a class="faq" href="/faq">FAQ</a> 
+			<a class="home" href="/">back to the generator</a>
 		</p>
 					</footer>
 </html>
