--- a/name_project/templates/index.html
+++ b/name_project/templates/index.html
@@ -4,78 +4,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
 
-<link rel="stylesheet" href="{% static 'main.css' %}"/>
 <link rel="stylesheet" href="{% static 'blox.css' %}"/>
 <link rel="stylesheet" href="{% static 'start.css' %}"/>
 <link rel="stylesheet" href="{% static 'reg.css' %}"/>
-  
+<link rel="stylesheet" href="{% static 'main.css' %}"/>
+
 <style>
-
-@media only screen and (max-width:99vw) 
-{
-	.html-block 
-	{
-		h1 
-		{
-			margin-left: 5vw;
-			margin-right: 5vw;
- 		}
-		body
-		{
-			margin-left: 5vw;
-			margin-right: 5vw;
-		}
-		footer
-		{
-			margin-left: 5vw;
-			margin-right: 5vw;
-		}
-	}
-}
-	
-h1 
-{
-	font-family: pstart;
-	color: #e30056;
-	font-size: 36px;
-	text-align: center;
-	margin-bottom: 10px;
-	justify-content: center;
-	margin-left:3vw;
-	margin-right:3vw;
-}
-
-a.gen:link, a.gen:visited 
-{
-	font-family: blox;
-	color: #127EF7;
-    	text-decoration: none;
-  	display: inline-block;
-  	padding: 15px 25px;
-  	font-size: 32px;
-  	cursor: pointer;
-  	text-align: center;
-  	outline: none;
- 	background-color: #ffd64b;
-	position: relative; 
-	margin-top: 30px;
-	overflow: hidden;
- 	border-radius: 15px;
- 	box-shadow: 0 6px #ffca18;
-}
-
-a.gen:hover 
-{
-  background-color: #ffdc65;
-}
-
-a.gen:active
-{
-  background-color: #ffdc65;
-  box-shadow: 0 5px #ffd033;
-  transform: translateY(4px);
-}
-
 body
 {
 	height: calc(100vh - 8em);
@@ -87,109 +21,8 @@ body
 	margin-right:3vw;
 }
 * {color:black; text-decoration: none;}
-
-footer
-{
-	margin-top:-16px;
-	font-size: 16px;
-	font-family: pstart;
-	text-align: center;
-	margin-left:3vw;
-	margin-right:3vw;
-}
-
-a.foot:link, a.foot:visited 
-{
-	font-family: pstart;
-	color: black;
-    	text-decoration: none;
-  	font-size: 16px;
-  	cursor: pointer;
-	overflow: hidden;
-}
-
-a.foot:hover, a.foot:active
-{
-  color: #127EF7;
-}
-	
-a.git:link, a.git:visited 
-{
-	font-family: reg;
-	color: black;
-    	text-decoration: none;
-  	font-size: 20px;
-  	cursor: pointer;
-	overflow: hidden;
-}
-
-a.git:hover, a.git:active
-{
-  color: #00E38D;
-}
-	
-a.faq:link, a.faq:visited 
-{
-	font-family: blox;
-	color: #ffd64b;
-    	text-decoration: none;
-  	display: inline-block;
-  	padding: 10px 20px;
-  	font-size: 16px;
-  	cursor: pointer;
-  	text-align: center;
-  	outline: none;
- 	background-color: #127EF7;
-	position: relative; 
-	margin-top: 30px;
-	overflow: hidden;
- 	border-radius: 15px;
- 	box-shadow: 0 6px #106ED8;
-}
-
-a.faq:hover 
-{
-  background-color: #4D9EF9;
-}
-
-a.faq:active
-{
-  background-color: #4D9EF9;
-  box-shadow: 0 5px #0E5FB9;
-  transform: translateY(4px);
-}
-	
-a.info:link, a.info:visited 
-{
-	font-family: blox;
-	color: white;
-    	text-decoration: none;
-  	display: inline-block;
-  	padding: 10px 20px;
-  	font-size: 16px;
-  	cursor: pointer;
-  	text-align: center;
-  	outline: none;
- 	background-color: #e30056;
-	position: relative; 
-	margin-top: 30px;
-	overflow: hidden;
- 	border-radius: 15px;
- 	box-shadow: 0 6px #C7004B;
-}
-
-a.info:hover 
-{
-  background-color: #EA4080;
-}
-
-a.info:active
-{
-  background-color: #EA4080;
-  box-shadow: 0 5px #E6206B;
-  transform: translateY(4px);
-}
 </style>
+  
 
   </head>
 
@@ -272,8 +105,8 @@ var TxtType = function(el, toRotate, period) {
 </body>
 	<footer>
 		<p>
-			<a class="faq" href="https://helpmenamemyproject.com/faq">FAQ</a> 
-			<a class="info" href="https://helpmenamemyproject.com/info">info</a>
+			<a class="faq" href="/faq">FAQ</a> 
+			<a class="info" href="/info">info</a>
 		</p>
 		<br>
 		<p>
