--- a/name_project/static/main.css
+++ b/name_project/static/main.css
@@ -115,6 +115,7 @@ a.gen:active
 footer
 {
 	margin-top:-16px;
+	margin-bottom:10px;
 	font-size: 16px;
 	font-family: pstart;
 	text-align: center;
